# EocLib_spec

./: README.md
spec/: CMakeLists.txt  config.cmake  info.yml
spec/src/e/lib/spec/: MMM.cpp  MMM.h  MethodPtrUtils.h  public.h
spec/test/: CMakeLists.txt  TestForMMM.cpp  TestForMethodPtrUtils.cpp
