include(${EOC_HOME}/EocBuildHelper.cmake)	
find_package(Catch2 REQUIRED)
aux_source_directory(. EocSpec_DIR_TESTS)
add_executable(EocSpec_Test ${EocSpec_DIR_TESTS})
set_property(TARGET EocSpec_Test PROPERTY CXX_STANDARD 17)
set_property(TARGET EocSpec_Test PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(EocSpec_Test EocSpec Catch2::Catch2)
include(CTest)
include(Catch)
catch_discover_tests(EocSpec_Test)